<resources>
    <string name="app_name">Curso0</string>
    <string name="hello_gallu">Hello gallu</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="result">Tu resultado</string>

    <!-- IMC App -->
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de tu peso para tu peso y altura</string>

    <string name="title_peso_normal">Peso normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de tu peso para tu peso y altura</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de peso para tu peso y altura</string>

    <!-- TodoApp -->
    <string name="Todo_title">Bienvenido,  tron </string>
    <string name="Todo_categories">Categorias: </string>
    <string name="Todo_tasks">Tareas: </string>
    <string name="Todo_Add_task">Añade la tarea</string>
    <string name="Todo_category_business">Negocios</string>
    <string name="Todo_category_personal">Personal</string>
    <string name="Todo_category_others">Otros</string>
    <string name="Todo_Add_task_button">Crear tarea</string>
    <string name="superheroapp">superHero App</string>

</resources>