<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_todoapp"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/Todo_Add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/Todo_category_business"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rdPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal_category"
            android:checked="false"
            android:text="@string/Todo_category_personal"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rdOtro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_other_category"
            android:checked="false"
            android:text="@string/Todo_category_others"
            android:textColor="@color/white"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Todo_Add_task_button"
        android:backgroundTint="@color/todo_accent"/>


</LinearLayout>