<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/todo_background_todoapp"
    tools:context=".TODO.TODOActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/Todo_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TodoSubtitle"
        android:text="@string/Todo_categories"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rvCategories"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Todo_tasks"
        style="@style/TodoSubtitle"
        android:layout_marginTop="32dp"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/rvTasks"/>
    
</LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        app:backgroundTint="@color/todo_accent"
        app:fabSize="normal"
        android:src="@android:drawable/ic_input_add"
        android:layout_margin="32dp"
        android:layout_gravity="end|bottom"
        android:contentDescription="TODO" />

</FrameLayout>